# CipherMail

./: .env.example  .gitignore  README.md  pyproject.toml
ciphermail/: __init__.py  app.py  main.py
ciphermail/config/: __init__.py  database.py
ciphermail/interface/: __init__.py  cli.py  ui.py
ciphermail/models/: __init__.py  message.py  user.py
ciphermail/services/: __init__.py  auth.py  encryption.py  messaging.py
data/: Dockerfile
scripts/: build  run
