[tool.poetry]
name = "ciphermail"
version = "0.0.1"
description = "Secure messaging system with Python and MongoDB"
authors = ["Eduardo Kairalla <eduardokairalla123@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12.3"
pymongo = "^4.6.1"
cryptography = "^42.0.2"
python-dotenv = "^1.0.0"
colorama = "^0.4.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
